force-app/main/default/objects/Callsheet__c/Callsheet__c.object-meta.xml
<CustomObject>
    <description>An object to hold callsheet values filled in by the client. This info is used by Vocal Events to populate the actual callsheet</description>
    <label>Callsheet</label>
    <nameField>
        <label>Callsheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Callsheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>