force-app/main/default/objects/Callsheet__c/fields/Booking_Form__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Booking this callsheet is related to</inlineHelpText>
    <label>Booking Form</label>
    <referenceTo>Booking_Form__c</referenceTo>
    <relationshipLabel>Callsheets</relationshipLabel>
    <relationshipName>Callsheets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>