force-app/main/default/objects/Callsheet__c/fields/Check_in_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Time__c</fullName>
    <label>Check-in Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>