force-app/main/default/objects/Callsheet__c/fields/Company_Name_of_Technical_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_of_Technical_Supplier__c</fullName>
    <label>Company Name of Technical Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>