force-app/main/default/objects/Callsheet__c/fields/Completed_on__c.field-meta.xml
<CustomField>
    <fullName>Completed_on__c</fullName>
    <inlineHelpText>The date and time this callsheet was completed by the client</inlineHelpText>
    <label>Completed on</label>
    <type>DateTime</type>
</CustomField>