force-app/main/default/objects/Callsheet__c/fields/Guest_House_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Guest_House_Contact_Person__c</fullName>
    <label>Guest House Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>