force-app/main/default/objects/Callsheet__c/fields/Guest_House_Contact_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Guest_House_Contact_s_Email__c</fullName>
    <label>Guest House Contact&apos;s Email</label>
    <type>Email</type>
</CustomField>