force-app/main/default/objects/Callsheet__c/fields/Guest_House_Contact_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guest_House_Contact_s_Phone__c</fullName>
    <label>Guest House Contact&apos;s Phone</label>
    <type>Phone</type>
</CustomField>