force-app/main/default/objects/Callsheet__c/fields/Guesthouse_Address__c.field-meta.xml
<CustomField>
    <fullName>Guesthouse_Address__c</fullName>
    <label>Guesthouse Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>