force-app/main/default/objects/Callsheet__c/fields/Guesthouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Guesthouse_Name__c</fullName>
    <label>Guesthouse Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>