force-app/main/default/objects/Callsheet__c/fields/How_many_meals_will_be_served__c.field-meta.xml
<CustomField>
    <fullName>How_many_meals_will_be_served__c</fullName>
    <inlineHelpText>How many meals will be served to the artist and crew</inlineHelpText>
    <label>How many meals will be served ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>