force-app/main/default/objects/Callsheet__c/fields/How_many_rooms_are_required__c.field-meta.xml
<CustomField>
    <fullName>How_many_rooms_are_required__c</fullName>
    <label>How many rooms are required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>