force-app/main/default/objects/Callsheet__c/fields/Is_breakfast_incuded__c.field-meta.xml
<CustomField>
    <fullName>Is_breakfast_incuded__c</fullName>
    <label>Is breakfast incuded ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>