force-app/main/default/objects/Callsheet__c/fields/Name_of_Technical_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Technical_Contact_Person__c</fullName>
    <label>Name of Technical Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>