force-app/main/default/objects/Callsheet__c/fields/Name_of_Venue__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Venue__c</fullName>
    <inlineHelpText>The name of the venue</inlineHelpText>
    <label>Name of Venue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>