force-app/main/default/objects/Callsheet__c/fields/Organiser_Email__c.field-meta.xml
<CustomField>
    <fullName>Organiser_Email__c</fullName>
    <label>Organiser Email</label>
    <type>Email</type>
</CustomField>