force-app/main/default/objects/Callsheet__c/fields/Organiser_Name__c.field-meta.xml
<CustomField>
    <fullName>Organiser_Name__c</fullName>
    <label>Organiser Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>