force-app/main/default/objects/Callsheet__c/fields/Organiser_Phone__c.field-meta.xml
<CustomField>
    <fullName>Organiser_Phone__c</fullName>
    <label>Organiser Phone</label>
    <type>Phone</type>
</CustomField>