force-app/main/default/objects/Callsheet__c/fields/Secondary_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Person__c</fullName>
    <label>Secondary Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>