force-app/main/default/objects/Callsheet__c/fields/Show_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Show_Agenda__c</fullName>
    <inlineHelpText>The agenda of the event</inlineHelpText>
    <label>Show Agenda</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>