force-app/main/default/objects/Callsheet__c/fields/Technical_Contact_Phone_no__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact_Phone_no__c</fullName>
    <label>Technical Contact Phone no</label>
    <type>Phone</type>
</CustomField>