force-app/main/default/objects/Callsheet__c/fields/Time_Doors_Open__c.field-meta.xml
<CustomField>
    <fullName>Time_Doors_Open__c</fullName>
    <inlineHelpText>What time do doors open to the public ?</inlineHelpText>
    <label>Time Doors Open</label>
    <length>255</length>
    <type>Text</type>
</CustomField>