force-app/main/default/objects/Callsheet__c/fields/Time_of_Performance__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Performance__c</fullName>
    <inlineHelpText>What time does the performance start ?</inlineHelpText>
    <label>Time of Performance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>