force-app/main/default/objects/Callsheet__c/fields/Where_and_when_are_meals_served__c.field-meta.xml
<CustomField>
    <fullName>Where_and_when_are_meals_served__c</fullName>
    <inlineHelpText>Where and when will meals be served to the Artist ?</inlineHelpText>
    <label>Where and when are meals served ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>